<resources>
    <string name="app_name">tp3restaurantes</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="user">User:</string>
    <string name="log_out">log out</string>
    <string name="all_reviews">all reviews</string>
    <string name="new_review">new review</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="log_in">log in</string>
    <string name="welcome">Welcome!</string>
    <string name="back">back</string>
    <string name="send">send</string>
</resources>